# evercas

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE.md  LICENSE.rst  Makefile  README.md  README.rst  index.html  mkdocs.yml  objects.inv  pyproject.toml  search.html  setup.py  tox.ini
api/: index.html
changelog/: index.html
docs/: api.md  api.rst  conf.py  index.rst  installation.rst  versioning.md  versioning.rst
evercas/: __init__.py  __meta__.py  _utils.py  checkout_strategies.py  evercas.py  put_strategies.py  store.py  store_entry.py  utils.py
hashfs/: _compat.py  hashfs.py
search/: search_index.json
tests/: test_hashfs.py
typings/blake3/: __init__.py
versioning/: index.html
