[project]
name = "evercas"
version = "0.8.0"
description = "Cloneable (with rclone) content-addressable storage for Python"
authors = [
    {name = "Weedon & Scott Studios", email = "Studios@WeedonAndScott.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}
keywords = ["evercas hash file system content addressable fixed storage"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
]

[project.urls]
Homepage = "https://github.com/weedonandscott/evercas"

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]
[tool.pdm.dev-dependencies]
lint = [
    "ruff==0.0.243",
    "pyright>=1.1.293",
]
test = [
    "pytest==7.2.1",
    "pytest-cov==4.0.0",
]
distribute = [
    "twine==4.0.2",
]
docs = [
    "mkdocs==1.4.2",
    "mkdocstrings[python]==0.20.0",
]
[tool.pdm.scripts]
lint = {composite = ["pyright", "ruff check .", "black ."]}
build = {composite = ["lint", "pdm build"]}
deploy-pypi = "twine upload dist/*"
deploy-docs = "mkdocs gh-deploy"
release = {composite = ["build", "deploy-pypi", "deploy-docs"]}

[tool.ruff]
select = ["E", "F", "I001"]

[tool.pyright]
strict=["**/**"]
include=["./*.py", "evercas/**"]